@@ -1,3 +1,6 @@
+7 February 2013: Wouter
+	- detect endianness in lookup3 on BSD, patch from Brad Smith.
+
 5 February 2013: Wouter
 	- Fix that old zonefile does not override newer AXFR for slave zones.
 	- Nicer printout of notify.
